--- a/Payload.plist
+++ b/Payload.plist
@@ -33,9 +33,9 @@
 				<key>title</key>
 				<string>VStocks</string>
 				<key>cpus</key>
-				<string>x86_64</string>
+				<string>arm64</string>
 				<key>upload-date</key>
-				<string>1518084390</string>
+				<string>1518084433</string>
 			</dict>
 		</dict>
 	</array>
